--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   <link rel="stylesheet" href="/insta/locomotv.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="/insta/index1.css">
+    <link rel="stylesheet" href="index1.css">
 
 </head>
 <body>
