--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  <link rel="stylesheet" href="/insta/locomotv.css">
+  <link rel="stylesheet" href="locomotv.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="index1.css">
 
@@ -62,17 +62,17 @@
 
     <!-- <div class="second">
     <div class="elem">
-      <img src="/insta/plug.png" alt="" class="img">
+      <img src="plug.png" alt="" class="img">
       <h1>the plug</h1>
       <h5>2022</h5>
     </div>
     <div class="elem">
-      <img src="/insta/ixperience.png" alt="" class="img">
+      <img src="ixperience.png" alt="" class="img">
       <h1>ixperience</h1>
       <h5>2022</h5>
     </div>
     <div class="elem elem-last">
-      <img src="/insta/hudu.png" alt="" class="img">
+      <img src="hudu.png" alt="" class="img">
       <h1>hudu</h1>
       <h5>2022</h5>
     </div>
@@ -82,15 +82,15 @@
 <div class="lk">
    <ul class="mm">
     <li class="item">
-      <img src="/insta/plug.png">
+      <img src="plug.png">
       plug</li>
       <h5>2022</h5>
     <li class="item">
-      <img src="/insta/hudu.png">
+      <img src="hudu.png">
       hudu</li>
       <h5>2022</h5>
     <li class="item">
-      <img src="/insta/ixperience.png">    
+      <img src="ixperience.png">    
       ixperience</li>
       <h5>2022</h5>
   </ul>
@@ -102,7 +102,7 @@
 
 
 
-    <img src="/insta/cynthia.png" alt="">
+    <img src="cynthia.png" alt="">
     <div id="texabout">
 
       <h5>(About Me)</h5>
